--- a/ansible/domain.yml
+++ b/ansible/domain.yml
@@ -13,9 +13,7 @@
 - name: Domain Controller
   hosts: dc
   roles:
-  - domain-controller
-  vars:
-    ansible_connection: winrm
-    ansible_winrm_transport: ntlm
-    ansible_winrm_server_cert_validation: ignore
-    ansible_port: 5985
+    - domain-controller
+  vars_files:
+    - ansible.yml
+    - domain.yml
