--- a/ansible/roles/bind/tasks/main.yml
+++ b/ansible/roles/bind/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: Set the DNS
+  set_fact:
+    dns: "{{ network_cidr | ansible.utils.ipmath(network_dns) }}"
+
 - name: Make directory for bind configuration
   file:
     path: /etc/bind
