--- a/docker/devops-agent/dockerfile
+++ b/docker/devops-agent/dockerfile
@@ -44,7 +44,6 @@ RUN ansible-galaxy collection install azure.azcollection --force
 RUN curl https://raw.githubusercontent.com/ansible-collections/azure/dev/requirements-azure.txt --output requirements-azure.txt
 RUN pip3 install -r requirements-azure.txt
 
-
 # Microsoft PowerShell
 RUN wget -q https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb
 RUN dpkg -i packages-microsoft-prod.deb
@@ -64,12 +63,13 @@ RUN apt-get update && apt-get install terraform
 # Hashicorp Vault
 RUN apt-get update && apt-get install vault
 
-# Azure DevOps Agent
-ARG TARGETARCH=linux-amd64
+# Set target architecture for DevOps agent
+ENV TARGETARCH='linux-x64'
 
 WORKDIR /azp
 
-COPY ./start.sh .
+COPY start.sh .
 RUN chmod +x start.sh
+RUN sed -i -e 's/\r$//' start.sh
 
 ENTRYPOINT [ "./start.sh" ]
