Typo in the name

--- a/.devops/pipelines/vmware.yml
+++ b/.devops/pipelines/vmware.yml
@@ -113,7 +113,7 @@ stages:
             $tfVars += "vcsa_system_name=`"$($vcsa.data.name).$($domain.data.name)`""
             $tfVars += "vcsa_ip=$($vcsa.data.ip)"
             $tfVars += "vcsa_network_cidr=`"$($network.data.network_cidr)`""
-            $tfVars += "vcsa_prefix=$($network.data.ncidr.split('/')[1])"
+            $tfVars += "vcsa_prefix=$($network.data.cidr.split('/')[1])"
             $tfVars += "vcsa_gateway=$($network.data.gateway)"
             $tfVars += "vcsa_dns=$($vcsa.data.dns)"
 
