--- a/ansible/roles/domain-controller/tasks/config.yml
+++ b/ansible/roles/domain-controller/tasks/config.yml
@@ -1,7 +1,7 @@
 ---
 - name: Set fact
   set_fact:
-    domain_path: "dc={{ dns_domain_name.split('.')[0] }},dc={{ dns_domain_name.split('.')[1] }}"
+    domain_path: "DC={{ dns_domain_name.split('.') | join(',DC=') }}"
 
 - name: Check for ActiveDirectory DSC Powershell module
   win_psmodule:
@@ -48,14 +48,35 @@
 
 - name: Create RDGateway Group
   win_domain_group:
-    name: 'RD Gateway Users'
+    name: RD Gateway Users
     scope: global
     path: "OU=Groups,OU=GO,{{ domain_path }}"
 
-- name: Create Service accounts
+- name: Generate array random passwords
+  set_fact:
+    passwords: [
+      { user: sql_svc, password: "{{ lookup('password', '/dev/null length=15') }}"},
+      { user: sql_agt, password: "{{ lookup('password', '/dev/null length=15') }}"},
+      { user: ansible, password: "{{ lookup('password', '/dev/null length=15') }}"},
+      { user: loadgen, password: "{{ lookup('password', '/dev/null length=15') }}"},
+      { user: loadgen_bot, password: "{{ lookup('password', '/dev/null length=15') }}"}
+    ]
+
+- name: Write secret to Vault using key value V2 engine
+  community.hashi_vault.vault_write:
+    url: "{{ vault_addr }}"
+    path: "go/domain/{{item.user}}"
+    token : "{{ vault_token }}"
+    data:
+      data:
+        password: "{{ item.password }}"
+    loop: "{{ passwords }}"
+    delegate_to: localhost
+
+- name: Create Service accounts - SQL Server
   win_domain_user:
     name: sql_svc
-    password: '{{ ansible_password }}'
+    password: "{{ (passwords | selectattr('user', '==', 'sql_svc') | first).password }}"
     state: present
     path: "OU=ServiceAccounts,OU=GO,{{ domain_path }}"
     description: SQL Server - Service Account
@@ -63,15 +84,15 @@
 - name: Create Service accounts
   win_domain_user:
     name: sql_agt
-    password: '{{ ansible_password }}'
+    password: "{{ (passwords | selectattr('user', '==', 'sql_agt') | first).password }}"
     state: present
     path: "OU=ServiceAccounts,OU=GO,{{ domain_path }}"
     description: SQL Agent - Service Account
 
-- name: Create Service accounts
+- name: Create Service accounts - SQL Agent
   win_domain_user:
-    name: mdt
-    password: '{{ ansible_password }}'
+    name: ansible
+    password: "{{ (passwords | selectattr('user', '==', 'ansible') | first).password }}"
     state: present
     path: "OU=ServiceAccounts,OU=GO,{{ domain_path }}"
     groups:
@@ -80,7 +101,7 @@
 - name: Create Service accounts
   win_domain_user:
     name: loadgen_bot
-    password: '{{ ansible_password }}'
+    password: "{{ (passwords | selectattr('user', '==', 'loadgen_bot') | first).password }}"
     state: present
     path: "OU=ServiceAccounts,OU=GO,{{ domain_path }}"
     description: SQL Server - Service Account
@@ -92,7 +113,7 @@
     name: "{{ 'LoadGen%03d' | format(item | int) }}"
     upn: "{{ 'LoadGen%03d' | format(item | int)  | lower }}@{{ dns_domain_name | lower }}"
     company: LoadGen
-    password: '{{ ansible_password }}'
+    password: "{{ (passwords | selectattr('user', '==', 'loadgen') | first).password }}"
     password_expired: false
     user_cannot_change_password: true
     state: present
